XMLtoCSV/objects/unpackaged/objects/Formulary_Products_vod__c.object
<CustomObject>
    <description>To display products in the formulary viewer, they must be entered into Formulary Product. Formulary product is referred to by Benefit Design Lines. Formulary product must be loaded before Benefit Design Lines.</description>
    <fields>
        <fullName>Competitor_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product belongs to a competitor. If not, the product is assumed to be a company product and shows up in bold in the formulary viewer.</description>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is only used for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_vod__c</fullName>
        <description>Market (such as Cholesterol Reducer) that this product belongs to.  This field is used as a filter in the formulary viewer.</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>Cholesterol Reducer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dopaminergic Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vasodilator</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Formulary Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>